--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,323 @@
-body {
+// #region MISC
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+a,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		sans-serif;
+	padding: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+	list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+	scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+	min-height: 100vh;
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
+	font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
+/* Give font family to code tags */
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+/* Make images easier to work with */
+img,
+picture {
+	max-width: 100%;
+	display: block;
+}
+
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+	html:focus-within {
+		scroll-behavior: auto;
+	}
+	*,
+	*::before,
+	*::after {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
+}
+// #endregion
+
+// #region INPUT-DEFAULTS
+/* Default styles for inputs */
+input,
+button,
+textarea,
+select {
+	font: inherit;
+	cursor: pointer;
+	padding-left: 0.5em;
+	border-radius: 1em;
+}
+
+/* All of our custom controls should be what we expect them to be */
+input,
+textarea {
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+}
+
+/*
+Show overflow in Edge
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+*/
+button,
+input {
+	overflow: visible;
+}
+
+/*
+Remove inner border and padding from Firefox
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+*/
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+	padding: 0;
+	border-style: none;
+}
+
+/*
+Remove padding in IE 10-
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+*/
+input[type="radio"],
+input[type="checkbox"] {
+	padding: 0;
+}
+
+/*
+Remove the default appearance of temporal inputs to avoid a Mobile Safari bug where setting a custom line-height prevents text from being vertically
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+See https://bugs.webkit.org/show_bug.cgi?id=139848
+*/
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="month"] {
+	-webkit-appearance: listbox;
+}
+
+/*
+1. Remove default vertical scrollbar in IE
+2. Textareas should really only resize vertically so they don't break their (horizontal) containers
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+ */
+textarea {
+	overflow: auto; /* 1 */
+	resize: vertical; /* 2 */
+}
+
+/*
+Correct cursor style of increment and decrement buttons in Chrome
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+*/
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+	height: auto;
+}
+
+/*
+Overrides extra rounded corners on search inputs in iOS
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+*/
+[type="search"] {
+	outline-offset: -2px;
+	-webkit-appearance: textfield;
+	-webkit-box-sizing: content-box;
+	box-sizing: content-box;
+}
+
+/*
+Remove inner padding and cancel buttons in Chrome and Safari on macOS
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+*/
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+	-webkit-appearance: none;
+}
+
+/*
+1. Correct inability to style clickable types in iOS and Safari
+2. Change font properties to `inherit` in Safari
+Source: https://github.com/twbs/bootstrap/blob/v4-dev/scss/_reboot.scss
+ */
+::-webkit-file-upload-button {
+	font: inherit; /* 2 */
+	-webkit-appearance: button; /* 1 */
+}
+
+/*
+ * Remove IE/ Edge clear "X" & eye icons
+ */
+input::-ms-clear,
+input::-ms-reveal {
+	display: none;
+}
+
+/* Remove Safari contacts icon */
+input::-webkit-contacts-auto-fill-button {
+	display: none;
+}
+
+/* Remove Safari password & caps lock icons */
+input[type="password"]::-webkit-credentials-auto-fill-button,
+input[type="password"]::-webkit-caps-lock-indicator {
+	display: none;
+}
+
+/*
+ * Disable WebKit's banana-yellow input fields
+ * Combination of techniques from:
+ * https://stackoverflow.com/questions/2781549/removing-input-background-colour-for-chrome-autocomplete
+ */
+
+@keyframes autofill {
+	to {
+		background: transparent;
+	}
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+textarea:-webkit-autofill:active,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus,
+select:-webkit-autofill:active {
+	-webkit-animation-name: autofill;
+	-webkit-animation-fill-mode: both;
+	-webkit-transition-delay: 9999s;
+	-webkit-transition-property: background-color, color;
+    animation-name: autofill;
+	animation-fill-mode: both;
+	transition-delay: 9999s;
+	transition-property: background-color, color;
+}
+// #endregion
+
+// #region ROOT-VARIABLES
+:root {
+	/* Colors */
+	--gray: #858585;
+}
+// #endregion
+
+// #region TEXT-STYLES
+.thin {
+	font-weight: 100;
+}
+
+.extra-light {
+	font-weight: 200;
+}
+
+.light {
+	font-weight: 300;
+}
+
+.regular {
+	font-weight: 400;
+}
+
+.medium {
+	font-weight: 500;
+}
+
+.semi-bold {
+	font-weight: 600;
+}
+
+.bold {
+	font-weight: 700;
+}
+
+.extra-bold {
+	font-weight: 800;
+}
+
+.black {
+	font-weight: 900;
+}
+// #endregion
+
+// #region FLEX-CONTAINERS
+.full-screen {
+	width: 100vw;
+	height: 100vh;
+}
+
+.fill-container {
+	width: 100%;
+	height: 100%;
+}
+
+.center-content {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.flex-column {
+	display: flex;
+	flex-direction: column;
+}
+
+.flex-row {
+	display: flex;
+	flex-direction: row;
+}
+
+.align-flex-start {
+	align-items: flex-start;
+}
+
+.align-flex-end {
+	align-items: flex-end;
+}
+
+.align-center {
+	align-items: center;
+}
+// #endregion
