--- a/src/components/explorer/Explorer.scss
+++ b/src/components/explorer/Explorer.scss
@@ -1,5 +1,29 @@
 .explorer {
+	padding-left: 0.3em;
+	padding-right: 0.5em;
 	width: 100%;
 	height: 100%;
 	background-color: #0652996e;
+
+	> .object-list {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+
+		> .object-list-item-selected {
+			background-color: #0026ff5d;
+		}
+
+		> .object-list-item {
+			padding-left: 1em;
+			position: relative;
+            cursor: pointer;
+		}
+
+		> .object-list-item::before {
+			position: absolute;
+			left: 0;
+			content: "-";
+		}
+	}
 }
