--- a/src/components/resizable_div/ResizableDiv.scss
+++ b/src/components/resizable_div/ResizableDiv.scss
@@ -6,7 +6,7 @@
 		top: 0;
 		width: 5px;
 		height: 100%;
-		cursor: e-resize;
+		cursor: ew-resize;
 		background: transparent;
 		user-select: none;
 	}
